# alloc

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/alloc/: __init__.py  artifact_loader.py  artifact_writer.py  browser_auth.py  callbacks.py  cli.py  code_analyzer.py  config.py  context.py  diagnosis_display.py  diagnosis_engine.py  diagnosis_rules.py  display.py  extractor_runner.py  ghost.py  model_extractor.py  model_registry.py  probe.py  ray_submit.py  stability.py  upload.py  yaml_config.py
src/alloc/catalog/: __init__.py  default_rate_card.json  gpus.v1.json
tests/: test_artifact.py  test_artifact_loader.py  test_auth.py  test_callbacks.py  test_catalog.py  test_cli.py  test_code_analyzer.py  test_context.py  test_diagnose_cli.py  test_diagnosis_engine.py  test_diagnosis_rules.py  test_extractor_activation.py  test_ghost.py  test_init_from_org.py  test_interconnect.py  test_model_extractor.py  test_probe_hw.py  test_probe_multi.py  test_ray_submit.py  test_stability.py  test_upload.py  test_verdict.py  test_yaml_config.py
