[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alloc"
version = "0.0.1"
description = "Engineer-first training calibration: estimate VRAM fit, profile short runs, and pick GPU configs under real budget constraints."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{name = "Alloc Labs", email = "hello@alloclabs.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pynvml>=11.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
alloc = "alloc.cli:app"

[project.urls]
Homepage = "https://alloclabs.com"
Repository = "https://github.com/alloc-labs/alloc"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"alloc.catalog" = ["*.json"]
